<resources>
    <string name="dlg_msg_payment_success">The payment was successful</string>
    <string name="IDS_SAPPS_POP_AN_ERROR_OCCURRED_WHILE_RESETTING_SAMSUNG_IN_APP_PURCHASE">An error occurred while resetting Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_AN_INVALID_VALUE_HAS_BEEN_PROVIDED_FOR_SAMSUNG_IN_APP_PURCHASE">An invalid value has been provided for Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_AN_UNEXPECTED_ERROR_HAS_OCCURRED_SAMSUNG_ACCOUNT_AUTHENTICATION_HAS_BEEN_CANCELLED">An unexpected error has occurred. Samsung account authentication has been cancelled.</string>
    <string name="IDS_SAPPS_POP_YOUR_PURCHASE_VIA_SAMSUNG_IN_APP_PURCHASE_IS_INVALID_A_FAKE_APPLICATION_HAS_BEEN_DETECTED_CHECK_THE_APP_MSG">Your purchase via Samsung In-App Purchase is invalid. A fake application has been detected. Check the app you are trying to purchase and try again.</string>
    <string name="IDS_SAPPS_POP_UNKNOWN_ERROR_OCCURRED">Unknown error occurred</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE">Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE_NEEDS_TO_BE_UPDATED">Samsung In-App Purchase needs to be updated</string>
    <string name="IDS_SAPPS_POP_TO_PURCHASE_ITEMS_YOU_NEED_TO_INSTALL_SAMSUNG_IN_APP_PURCHASE_INSTALL_Q">To purchase items, you need to install Samsung In-App Purchase. Install?</string>
    <string name="IDS_SAPPS_POP_A_NEW_VERSION_OF_SAMSUNG_IN_APP_PURCHASE_IS_AVAILABLE_UPDATE_Q">A new version of Samsung In-App Purchase is available. Update?</string>
    <string name="IDS_SAPPS_BODY_WAITING_ING">Waiting...</string>
    <string name="IDS_SAPPS_POP_PRODUCT_DOES_NOT_EXIST_IN_THIS_STORE">Product does not exist in this store</string>
    <string name="IDS_SAPPS_POP_ALREADY_PURCHASED">Already purchased</string>
    <string name="IDS_SAPPS_POP_PAYMENT_CANCELLED">Payment cancelled</string>
    <string name="IDS_SAPPS_POP_NETWORK_UNAVAILABLE">Network not available</string>
    <string name="IDS_SAPPS_HEADER_ITEM_PURCHASED">Item purchased</string>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">Pregnancy</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format" formatted="false">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="ga_trackingId">UA-37713016-5</string>
    <string name="action_settings">Settings</string>
    <string name="signup_text_text1">Benefits of signing up?</string>
    <string name="signup_text_text2">Swipe to learn more</string>
    <string name="signup_text_text3">If you have more than one device</string>
    <string name="signup_text_text4">(Phone, Tablet..) you can sync your</string>
    <string name="signup_text_text5">data between them</string>
    <string name="signup_text_text6">Securely back up your important</string>
    <string name="signup_text_text7">pregnancy data. If you lose your</string>
    <string name="signup_text_text8">device, you can always restore</string>
    <string name="signup_text_text9">your info.</string>
    <string name="firstNameNotEmpty">First name cannot be empty</string>
    <string name="lastNameNotEmpty">Last name cannot be empty</string>
    <string name="emailNotEmpty">Email cannot be empty</string>
    <string name="passwordNotEmpty">Password cannot be empty</string>
    <string name="verifyPasswordNotEmpty">Password does not match. Try again</string>
    <string name="alertDialogTitle">Alert</string>
    <string name="ok">OK</string>
    <string name="emailIdInvalid">The email address was invalid</string>
    <string name="signingup">Signing up...</string>
    <string name="tandctext">By registering, I accept the Health &amp; Parenting Ltd <u>[Terms of use]</u> and <u>[Privacy policy]</u></string>
    <string name="babygendertitle">Choose Baby Gender</string>
    <string name="babygenderboy">Boy</string>
    <string name="babygendergirl">Girl</string>
    <string name="babygendertwins">Twins</string>
    <string name="babygenderunknown">Unknown</string>
    <string name="cancel">CANCEL</string>
    <string name="babyrelationtitle">Choose</string>
    <string name="relMother">Mother</string>
    <string name="relfather">Father</string>
    <string name="relpartner">Partner of mother</string>
    <string name="relgrandparent">Grandparent</string>
    <string name="reluncleoraunt">Uncle or Aunt</string>
    <string name="relfriend">Friend of mother</string>
    <string name="signuperrormsg202_203">Email already taken, please login or sign up with a different email</string>
    <string name="signuperrormsg125">The email address was invalid</string>
    <string name="signuperrormsg">Signup error, please try again later</string>
    <string name="facebookUpdateError">No user logged in. You need to login to update your details.</string>
    <string name="loggingup">Logging in...</string>
    <string name="loginerror">Email or password is incorrect</string>
    <string name="moreScreenTitle">المزيد</string>
    <string name="settingScreenTitle">Settings</string>
    <string name="tellAfriendSettingScreenTitle">Tell a friend</string>
    <string name="accountSettingScreenTitle">Account</string>
    <string name="tellOrInviteFriend">Send Invitation</string>
    <string name="topNote">"Invite your partner,
family &amp; friends!"</string>
    <string name="subTopNote">"Pregnancy is a shared journey.
Recommend this App"</string>
    <string name="my_link"><a ref="https://play.google.com/store/apps/details?id=com.hp.pregnancy.lite">https://play.google.com/store/apps/details?id=com.hp.pregnancy.lite</a></string>
    <string name="appSettingScreenTitle">App Settings</string>
    <string name="label_registration_text">Reset Password</string>
    <string name="hello_world">Hello world!</string>
    <string name="firstName">الإسم</string>
    <string name="lastName">اللقب</string>
    <string name="addProfilePic">أضف صورتك</string>
    <string name="capsOr">أو</string>
    <string name="capsSignUp">سجل</string>
    <string name="capsLogin">تسجيل الدخول</string>
    <string name="password">كلمة المرور</string>
    <string name="verify">تحقق من</string>
    <string name="emailAddress">عنوان البريد الإلكتروني</string>
    <string name="capsNext">التالى</string>
    <string name="forgotPasswordText">هل نسيت كلمة المرور؟</string>
    <string name="withFB"><bdi>عبر <u>فيسبوك</u></bdi></string>
    <string name="withTwitter"><bdi>عبر <u>تويتر</u></bdi></string>
</resources>