<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_splash"
    android:orientation="vertical"
    android:id="@+id/topLayout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/separator"
        android:layout_alignRight="@id/topLoginBtn"
        android:fillViewport="false"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lineimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/whiteline"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffff87a9"
        android:padding="13.0dip"
        android:text="@string/capsNext"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp" />

    <TextView
        android:id="@id/topLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="5.0dip"
        android:text="@string/capsLogin"
        android:textColor="#ffffffff"
        android:textSize="14.0sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <RelativeLayout
        android:id="@+id/thirdLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLoginBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@id/namelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5.0dip"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:layout_weight="0.83"
                android:background="@drawable/inputfeild"
                android:hint="@string/firstName"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="15"
                android:nextFocusDown="@id/lastName"
                android:paddingBottom="10.0dip"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:paddingTop="10.0dip"
                android:singleLine="true"
                android:textColor="#ff5a5a5a"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:background="@drawable/inputfeild"
                android:hint="@string/lastName"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/emailid"
                android:paddingBottom="10.0dip"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:paddingTop="10.0dip"
                android:singleLine="true"
                android:textColor="#ff5a5a5a"
                android:textSize="16.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@id/addImageWrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/namelayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/inputfeild"
            android:gravity="center_vertical"
            android:paddingBottom="5.0dip"
            android:paddingLeft="13.0dip"
            android:paddingRight="13.0dip"
            android:paddingTop="5.0dip">

            <Button
                android:id="@id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/userImage"
                android:background="@drawable/inputfeild"
                android:gravity="left|center"
                android:hint="@string/addProfilePic"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@id/userImage"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2.0dip"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <EditText
            android:id="@id/emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addImageWrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/inputfeild"
            android:hint="@string/emailAddress"
            android:imeOptions="actionNext"

            android:nextFocusDown="@id/passwdEditext"
            android:paddingBottom="10.0dip"
            android:paddingLeft="13.0dip"
            android:paddingRight="13.0dip"
            android:paddingTop="10.0dip"
            android:singleLine="true"
            android:textColor="#ff5a5a5a"
            android:textSize="16.0sp" />

        <LinearLayout
            android:id="@id/passwordlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailid"
            android:layout_marginBottom="5.0dip"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/passwdEditext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:layout_weight="0.50"
                android:background="@drawable/inputfeild"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusDown="@id/verifyEditText"
                android:paddingBottom="10.0dip"
                android:gravity="right"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:paddingTop="10.0dip"
                android:singleLine="true"
                android:textColor="#ff5a5a5a"
                android:textSize="16.0sp" />

            <EditText
                android:id="@id/verifyEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.59"
                android:background="@drawable/inputfeild"
                android:hint="@string/verify"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:gravity="right"
                android:paddingBottom="10.0dip"
                android:paddingLeft="13.0dip"
                android:paddingRight="13.0dip"
                android:paddingTop="10.0dip"
                android:singleLine="true"
                android:textColor="#ff5a5a5a"
                android:textSize="16.0sp" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tandc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/tickwhite"
        android:padding="13.0dip"
        android:text="@string/tandctext"
        android:textColor="#ffffffff"
        android:textSize="12.0sp"
        android:layout_below="@+id/secondLayout"
        android:layout_alignRight="@id/topLoginBtn"
        android:layout_alignEnd="@id/topLoginBtn" />

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8.0dip"
        android:paddingTop="20.0dip"
        android:layout_alignTop="@+id/scrollView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp">

        <Button
            android:id="@+id/facebookBtn"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#ff035cb2"
            android:drawableLeft="@drawable/fb_icon"
            android:drawablePadding="10.0dip"
            android:gravity="left|center"
            android:paddingBottom="8.0dip"
            android:paddingLeft="15.0dip"
            android:paddingTop="8.0dip"
            android:text="@string/withFB"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

        <Button
            android:id="@+id/twitterBtn"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="1.0"
            android:background="#ff0196ee"
            android:drawableLeft="@drawable/tw_icon"
            android:drawablePadding="10.0dip"
            android:gravity="left|center"
            android:paddingBottom="10.0dip"
            android:paddingLeft="15.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/withTwitter"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/topHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/capsOr"
            android:textColor="#ffffffff"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/topHeading"
        android:layout_width="@dimen/phone_heading_width_other"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/capsSignUp"
        android:textColor="#ffffffff"
        android:textSize="18.0sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>